Updated Kafka producer method

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,8 +6,13 @@ spring:
     bootstrap-servers: localhost:9092
 
     producer:
+      retries: 5
+      acks: all
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+      properties:
+        delivery.timeout.ms: 120000
+        request.timeout.ms: 30000
 
     consumer:
       group-id: email-consumer-group
