--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,6 +13,7 @@ spring:
       properties:
         delivery.timeout.ms: 120000
         request.timeout.ms: 30000
+        max.block.ms: 10000
 
     consumer:
       group-id: email-consumer-group
